# app/api/v1/endpoints/webhooks.py
@@ -17,13 +17,13 @@ router = APIRouter()
 logger = logging.getLogger(__name__)
 
 
-def check_webhook_exist(channel_id: str, db: Session = Depends(deps.get_db)) -> Webhook:
-    webhook = crud.webhook.get(db=db, id=channel_id)
+def check_webhook_exist(webhook_id: str, db: Session = Depends(deps.get_db)) -> Webhook:
+    webhook = crud.webhook.get(db=db, id=webhook_id)
     if not webhook:
-        logger.info(f"Specified webhook didn't exist. (channel_id={channel_id})")
+        logger.info(f"Specified webhook didn't exist. (webhook_id={webhook_id})")
         raise HTTPException(
             status_code=status.HTTP_404_NOT_FOUND,
-            detail=f"Specified webhook(channel_id:{channel_id}) didn't exist.",
+            detail=f"Specified webhook(webhook_id:{webhook_id}) didn't exist.",
         )
     return webhook
 
@@ -37,65 +37,56 @@ async def get_webhooks(*, db: Session = Depends(deps.get_db)):
     return [DecryptedWebhookInDB.from_orm(webhook) for webhook in webhooks]
 
 
-@router.get("/{channel_id}", response_model=DecryptedWebhookInDB)
+@router.get("/{webhook_id}", response_model=DecryptedWebhookInDB)
 async def get_webhook(
-    *, webhook: Webhook = Depends(check_webhook_exist), channel_id: str
+    *, webhook: Webhook = Depends(check_webhook_exist), webhook_id: str
 ):
-    logger.info(f"Fetched the webhook. (channel_id={channel_id})")
+    logger.info(f"Fetched the webhook. (webhook_id={webhook_id})")
     return DecryptedWebhookInDB.from_orm(webhook)
 
 
-@router.put("/{channel_id}", response_model=DecryptedWebhookInDB)
+@router.put("/{webhook_id}", response_model=DecryptedWebhookInDB)
 async def update_webhook(
     *,
     response: Response,
     db: Session = Depends(deps.get_db),
     webhook_in: WebhookCreate,
-    channel_id: str,
+    webhook_id: str,
 ):
-    webhook = crud.webhook.get(db=db, id=channel_id)
+    webhook = crud.webhook.get(db=db, id=webhook_id)
 
     if webhook:
         crud.webhook.update(db=db, db_obj=webhook, obj_in=webhook_in)
         response.status_code = status.HTTP_200_OK
-        logger.info(f"Updated the webhook. (channel_id={channel_id})")
+        logger.info(f"Updated the webhook. (webhook_id={webhook_id})")
     else:
-        webhook_item = WebhookDBCreate(
-            channel_id=channel_id,
-            id=webhook_in.id,
-            token=webhook_in.token,
-            is_nsfw=webhook_in.is_nsfw,
-            lang=webhook_in.lang,
-            currency=webhook_in.currency,
-        )
-        webhook_in = WebhookDBCreate.parse_obj(webhook_item)
         webhook = crud.webhook.create(db=db, obj_in=webhook_in)
         response.status_code = status.HTTP_201_CREATED
-        logger.info(f"Created the webhook. (channel_id={channel_id})")
+        logger.info(f"Created the webhook. (webhook_id={webhook_id})")
 
     return DecryptedWebhookInDB.from_orm(webhook)
 
 
-@router.delete("/{channel_id}")
+@router.delete("/{webhook_id}")
 async def delete_webhook(
     *,
     db: Session = Depends(deps.get_db),
     webhook: Webhook = Depends(check_webhook_exist),
-    channel_id: str,
+    webhook_id: str,
 ):
-    crud.webhook.remove(db=db, id=webhook.channel_id)
-    logger.info(f"Removed the webhook. (channel_id={channel_id})")
+    crud.webhook.remove(db=db, id=webhook.id)
+    logger.info(f"Removed the webhook. (webhook_id={webhook_id})")
     return Response(status_code=status.HTTP_204_NO_CONTENT)
 
 
-@router.patch("/{channel_id}", response_model=DecryptedWebhookInDB)
+@router.patch("/{webhook_id}", response_model=DecryptedWebhookInDB)
 async def patch_webhook(
     *,
     db: Session = Depends(deps.get_db),
     webhook: Webhook = Depends(check_webhook_exist),
     patch_data: WebhookUpdate,
-    channel_id: str,
+    webhook_id: str,
 ):
     crud.webhook.update(db=db, db_obj=webhook, obj_in=patch_data)
-    logger.info(f"Updated the webhook. (channel_id={channel_id})")
+    logger.info(f"Updated the webhook. (webhook_id={webhook_id})")
     return DecryptedWebhookInDB.from_orm(webhook)
